--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
           </div>
           <div class="project-image">
             <div class="item">
+              <span>Online Banking</span>
               <img
                 src="./bg_files/project-1.jpg"
                 alt="1"
@@ -401,6 +402,7 @@
               />
             </div>
             <div class="item">
+              <span>Classic Industry</span>
               <img
                 src="./bg_files/project-2.jpg"
                 alt="1"
@@ -409,6 +411,7 @@
               />
             </div>
             <div class="item">
+              <span>Boombap Audio</span>
               <img
                 src="./bg_files/project-3.jpg"
                 alt="1"
@@ -417,6 +420,7 @@
               />
             </div>
             <div class="item">
+              <span>Van Moose</span>
               <img
                 src="./bg_files/project-4.jpg"
                 alt="1"
@@ -425,6 +429,7 @@
               />
             </div>
             <div class="item">
+              <span>Joy Moments</span>
               <img
                 src="./bg_files/project-5.jpg"
                 alt="1"
@@ -433,6 +438,7 @@
               />
             </div>
             <div class="item">
+              <span>Spark Events</span>
               <img
                 src="./bg_files/project-6.jpg"
                 alt="1"
@@ -441,6 +447,7 @@
               />
             </div>
             <div class="item">
+              <span>Casual Wear</span>
               <img
                 src="./bg_files/project-7.jpg"
                 alt="1"
@@ -449,6 +456,7 @@
               />
             </div>
             <div class="item">
+              <span>Zazoo Apps</span>
               <img
                 src="./bg_files/project-8.jpg"
                 alt="1"
@@ -531,15 +539,15 @@
               <div class="number">
                 <div class="num">
                   <span id="no">231</span>
-                  <p>Happy Users</p>
+                  <p>Happy <br>Users</p>
                 </div>
                 <div class="num">
                   <span id="no">121</span>
-                  <p>Issues Solved</p>
+                  <p>Issues <br>Solved</p>
                 </div>
                 <div class="num">
                   <span id="no">159</span>
-                  <p>Good Reviews</p>
+                  <p>Good <br>Reviews</p>
                 </div>
               </div>
             </div>
